[workspace]

[package]
name = "rskafka-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
rskafka = { version = "0.3.0" , features = ["full"] }
env_logger = "0.9.1"
